--- a/BeerProject/StoryBoards/Base.lproj/Main.storyboard
+++ b/BeerProject/StoryBoards/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,8 +25,11 @@
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZy-m5-7F3">
-                                            <rect key="frame" x="176" y="25" width="41.333333333333343" height="20.333333333333329"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZy-m5-7F3">
+                                            <rect key="frame" x="111.66666666666669" y="25" width="170" height="20.333333333333329"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="bfh-DL-at8"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -34,7 +38,7 @@
                                             <rect key="frame" x="16" y="0.0" width="70" height="70"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZZq-ME-DAd">
-                                            <rect key="frame" x="233.33333333333337" y="11" width="139.66666666666663" height="48"/>
+                                            <rect key="frame" x="373" y="11" width="0.0" height="48"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -45,8 +49,8 @@
                                         <constraint firstItem="DZy-m5-7F3" firstAttribute="centerX" secondItem="VTP-Y8-8fU" secondAttribute="centerX" id="FUN-E1-7VG"/>
                                         <constraint firstItem="ZZq-ME-DAd" firstAttribute="top" secondItem="VTP-Y8-8fU" secondAttribute="topMargin" id="G7x-a1-0Xi"/>
                                         <constraint firstItem="rlS-rE-c0a" firstAttribute="top" secondItem="VTP-Y8-8fU" secondAttribute="top" id="K2V-4r-kPT"/>
+                                        <constraint firstItem="ZZq-ME-DAd" firstAttribute="leading" secondItem="DZy-m5-7F3" secondAttribute="trailing" constant="91.333333333333314" id="Lu5-Ut-NYK"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="ZZq-ME-DAd" secondAttribute="bottom" id="Ro6-R2-uG5"/>
-                                        <constraint firstItem="ZZq-ME-DAd" firstAttribute="leading" secondItem="DZy-m5-7F3" secondAttribute="trailing" constant="16" id="SUP-YG-ihf"/>
                                         <constraint firstItem="DZy-m5-7F3" firstAttribute="centerY" secondItem="VTP-Y8-8fU" secondAttribute="centerY" id="XB7-SG-rUN"/>
                                         <constraint firstItem="rlS-rE-c0a" firstAttribute="width" secondItem="VTP-Y8-8fU" secondAttribute="width" multiplier="0.178117" id="XjH-LP-3YW"/>
                                         <constraint firstItem="ZZq-ME-DAd" firstAttribute="trailing" secondItem="VTP-Y8-8fU" secondAttribute="trailingMargin" id="eIE-xh-XL4"/>
@@ -67,11 +71,51 @@
                             <outlet property="delegate" destination="ycs-Ff-RIo" id="U1z-jW-mTj"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Beers" id="Db5-6g-eNF"/>
+                    <navigationItem key="navigationItem" title="Beers" id="Db5-6g-eNF">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="heart" catalog="system" id="vlg-Q6-kbZ">
+                            <connections>
+                                <segue destination="oTB-eb-nvh" kind="presentation" id="0RJ-4y-As2"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qja-1R-Mwt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1019.0839694656488" y="-177.46478873239437"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="fBV-Tp-5fn">
+            <objects>
+                <collectionViewController id="oTB-eb-nvh" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="1g0-xV-NDn">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fUO-9H-9rL">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="d5g-PF-ntd">
+                                <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="L7O-gI-5NR">
+                                    <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionViewCellContentView>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="oTB-eb-nvh" id="nA6-DS-NwM"/>
+                            <outlet property="delegate" destination="oTB-eb-nvh" id="Z1C-la-dFF"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BVv-8F-EQ7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1019" y="549"/>
         </scene>
         <!--Beer View Controller-->
         <scene sceneID="ug7-vJ-brs">
@@ -94,7 +138,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0ST-eO-AYK">
-                                <rect key="frame" x="16" y="475.33333333333326" width="361" height="261.66666666666674"/>
+                                <rect key="frame" x="16" y="455.33333333333326" width="361" height="281.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="beerInformation" id="WLM-RL-jsg">
@@ -126,15 +170,22 @@
                             <constraint firstItem="kR0-z0-gYl" firstAttribute="top" secondItem="XrT-Iw-u9k" secondAttribute="top" constant="20" id="VoS-ff-qeJ"/>
                             <constraint firstItem="kR0-z0-gYl" firstAttribute="centerX" secondItem="XjB-Yz-GQz" secondAttribute="centerX" id="gRK-cy-uRV"/>
                             <constraint firstItem="bfb-1M-kxX" firstAttribute="top" secondItem="0ST-eO-AYK" secondAttribute="bottom" constant="40" id="lJz-ky-fBc"/>
-                            <constraint firstItem="0ST-eO-AYK" firstAttribute="top" secondItem="n1I-dX-7Vx" secondAttribute="bottom" constant="40" id="oag-ko-kp5"/>
+                            <constraint firstItem="0ST-eO-AYK" firstAttribute="top" secondItem="n1I-dX-7Vx" secondAttribute="bottom" constant="20" id="oag-ko-kp5"/>
                             <constraint firstItem="0ST-eO-AYK" firstAttribute="leading" secondItem="XrT-Iw-u9k" secondAttribute="leading" constant="16" id="pI2-8Q-4q7"/>
                             <constraint firstItem="kR0-z0-gYl" firstAttribute="height" secondItem="XjB-Yz-GQz" secondAttribute="height" multiplier="0.234742" id="uSV-Ts-piP"/>
                             <constraint firstItem="XrT-Iw-u9k" firstAttribute="trailing" secondItem="0ST-eO-AYK" secondAttribute="trailing" constant="16" id="yfD-0h-YKf"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Yd5-jf-HST"/>
+                    <navigationItem key="navigationItem" id="Yd5-jf-HST">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="note.text" catalog="system" id="wsS-Su-L0Z">
+                            <connections>
+                                <action selector="noteButtonPressed:" destination="2xl-A4-6qJ" id="Vew-zS-fcX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="beerImage" destination="kR0-z0-gYl" id="4iz-qZ-nW7"/>
+                        <outlet property="contributeLabel" destination="bfb-1M-kxX" id="VdE-3A-TUK"/>
                         <outlet property="descriptionLabel" destination="n1I-dX-7Vx" id="lHo-Ok-Sa8"/>
                         <outlet property="tableView" destination="0ST-eO-AYK" id="zlr-T2-GRB"/>
                     </connections>
@@ -163,6 +214,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart" catalog="system" width="128" height="107"/>
+        <image name="note.text" catalog="system" width="128" height="107"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
