--- a/BeerProject/StoryBoards/Base.lproj/Main.storyboard
+++ b/BeerProject/StoryBoards/Base.lproj/Main.storyboard
@@ -74,7 +74,8 @@
                     <navigationItem key="navigationItem" title="Beers" id="Db5-6g-eNF">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="heart" catalog="system" id="vlg-Q6-kbZ">
                             <connections>
-                                <segue destination="oTB-eb-nvh" kind="presentation" id="0RJ-4y-As2"/>
+                                <action selector="likeButtonPressed:" destination="ycs-Ff-RIo" id="h60-K4-nOX"/>
+                                <segue destination="Ti2-tE-LtF" kind="presentation" id="0RJ-4y-As2"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -83,28 +84,43 @@
             </objects>
             <point key="canvasLocation" x="1019.0839694656488" y="-177.46478873239437"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Like Beers-->
         <scene sceneID="fBV-Tp-5fn">
             <objects>
-                <collectionViewController id="oTB-eb-nvh" sceneMemberID="viewController">
+                <collectionViewController id="oTB-eb-nvh" customClass="LikeBeerCollectionViewController" customModule="BeerProject" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="1g0-xV-NDn">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fUO-9H-9rL">
-                            <size key="itemSize" width="128" height="128"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fUO-9H-9rL">
+                            <size key="itemSize" width="400" height="400"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="d5g-PF-ntd">
-                                <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="likeBeer" id="d5g-PF-ntd" customClass="LikeBeerViewCell" customModule="BeerProject" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="193" width="400" height="400"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="L7O-gI-5NR">
-                                    <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="400" height="400"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="toH-h3-zlp">
+                                            <rect key="frame" x="20" y="20" width="360" height="360"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="toH-h3-zlp" firstAttribute="top" secondItem="L7O-gI-5NR" secondAttribute="top" constant="20" id="Egq-AH-RI0"/>
+                                        <constraint firstItem="toH-h3-zlp" firstAttribute="leading" secondItem="L7O-gI-5NR" secondAttribute="leading" constant="20" id="KwV-It-6oQ"/>
+                                        <constraint firstAttribute="bottom" secondItem="toH-h3-zlp" secondAttribute="bottom" constant="20" id="KzT-af-AUV"/>
+                                        <constraint firstAttribute="trailing" secondItem="toH-h3-zlp" secondAttribute="trailing" constant="20" id="p6w-IH-ifv"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
+                                <color key="backgroundColor" red="0.65490196079999996" green="0.79607843140000001" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="beerImage" destination="toH-h3-zlp" id="V2Q-P7-G4e"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -112,10 +128,11 @@
                             <outlet property="delegate" destination="oTB-eb-nvh" id="Z1C-la-dFF"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" title="Like Beers" id="7yz-vv-c0p"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BVv-8F-EQ7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1019" y="549"/>
+            <point key="canvasLocation" x="1944.2748091603053" y="548.59154929577471"/>
         </scene>
         <!--Beer View Controller-->
         <scene sceneID="ug7-vJ-brs">
@@ -211,6 +228,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GhK-qF-VlT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="92.36641221374046" y="-177.46478873239437"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="FBn-1w-wsZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ti2-tE-LtF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="KF7-d6-SAC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="108"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oTB-eb-nvh" kind="relationship" relationship="rootViewController" id="bkX-HY-ck9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QfY-ko-we5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1017.5572519083969" y="548.59154929577471"/>
         </scene>
     </scenes>
     <resources>
